--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8">
-    <title>Hermione6.GitHub.io by hermione6</title>
+    <title>Miss Lunatica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Hermione6.GitHub.io</h1>
-      <h2 class="project-tagline">A web application to build your blog on GitHub</h2>
+      <h1 class="project-name">Miss Lunatica's Official Blog</h1>
+      <h2 class="project-tagline">Powered by her Apprentice</h2>
     </section>
 
     <section class="main-content">
