--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Blog</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>I am Miss Lunatica, aka 师父。I am cute and kind. I have lots of ideas and hobbies. BTW, thanks to my apprentice, you can visit this website here. Actually he is a good young man too, although sometimes he is totally annoying. He is not bad for sure. Anyway, for more articles about me, you might visit <a href="http://163.misslunatica.net" class="blog-link">my old blog</a>, or my <a href="http://blog.misslunatica.net" class="blog-link">my 徒儿's blog</a> to watch some x videos.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
