--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Blog</h3>
 
-<p>I am Miss Lunatica, aka 师父。I am cute and kind. I have lots of ideas and hobbies. BTW, thanks to my apprentice, you can visit this website here. Actually he is a good young man too, although sometimes he is totally annoying. He is not bad for sure. Anyway, for more articles about me, you might visit <a href="http://163.misslunatica.net" class="blog-link">my old blog</a>, or my <a href="http://blog.misslunatica.net" class="blog-link">my 徒儿's blog</a> to watch some x videos.</p>
+<p>I am Miss Lunatica, aka 师父。I am cute and kind. I have lots of ideas and hobbies. BTW, thanks to my apprentice, you can visit this website here. Actually he is a good young man too, although sometimes he is totally annoying. He is not bad for sure. Anyway, for more articles about me, you might visit <a href="http://163.misslunatica.net" class="blog-link">my old blog</a>, or my <a href="http://hanqo.github.io/" class="blog-link">my 徒儿's blog</a> to watch some x videos.</p>
 
 
       <footer class="site-footer">
