add fonts and bold

--- a/forgetting-in-the-water.html
+++ b/forgetting-in-the-water.html
@@ -17,10 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Blog</h3>
 
-<p>鱼得水逝而相忘乎水，鸟乘风飞而不知有风。识此可以超物累，可以乐天机。</p>
-                                                                                                         <p align='right'>——《菜根谭》</p>
+<p><b>鱼得水逝而相忘乎水，鸟乘风飞而不知有风。识此可以超物累，可以乐天机。</b></p>
+                                                                                                         <p align='right'><b>——《菜根谭》</b></p>
 <p>有时候，你因为一个人而想要变得更好；有时候，你因为一本书而想要变得更好。</p>
 
 <p>初读这本小说，以为不过是简单的校园纯爱，出于对某蔡的喜爱才没有弃之高阁。读完它是在飞驰的火车上，眼泪和这本书的结局一样自然的流露，才知道平淡如水是这样一个伟大的哲学境界。</p>
