--- a/forgetting-inside-the-water.html
+++ b/forgetting-inside-the-water.html
@@ -35,8 +35,11 @@
             
 <p>想来这本书之于我，最可贵的是，我既想要变成鲸鱼，也想要变成大海。</p>
 
+<br>
+<br>
+
 <h3><a id="comments" class="anchor" href="#comments" aria-hidden="true"><span class="octicon octicon-link"></span></a>历史评论</h3>
-<code>
+<div class="comment">
 <p>赵汉2010-11-26 00:20<br />
 记得看完这部小说是今年春天，仿似一缕阳光穿透了广州连日的阴霾 <br />
 痞子总是给着我们意外的惊喜，每一本小说都在诠释不同的美好 <br />
@@ -90,7 +93,7 @@
 <p>赵汉2010-11-28 20:06<br />
 回复谢月：哎~很早之前就想去台湾看看了~应该会有机会的~~淘宝上貌似有，为什么书店不卖繁体版呢，sigh。。。<br />
 </p>
-</code>
+</div>
 
       <footer class="site-footer">
 
